--- a/api/modeling/tweets_cleaning.ipynb
+++ b/api/modeling/tweets_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sentiment</th>\n",
+       "      <th>label</th>\n",
        "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -74,7 +74,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    sentiment                                               text\n",
+       "        label                                               text\n",
        "0  Irrelevant  I mentioned on Facebook that I was struggling ...\n",
        "1     Neutral  BBC News - Amazon boss Jeff Bezos rejects clai...\n",
        "2    Negative  @Microsoft Why do I pay for WORD when it funct...\n",
@@ -82,7 +82,7 @@
        "4     Neutral  Now the President is slapping Americans in the..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sentiment</th>\n",
+       "      <th>label</th>\n",
        "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -156,7 +156,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  sentiment                                               text\n",
+       "      label                                               text\n",
        "0  Positive  im getting on borderlands and i will murder yo...\n",
        "1  Positive  I am coming to the borders and I will kill you...\n",
        "2  Positive  im getting on borderlands and i will kill you ...\n",
@@ -164,7 +164,7 @@
        "4  Positive  im getting on borderlands 2 and i will murder ..."
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sentiment</th>\n",
+       "      <th>label</th>\n",
        "      <th>text</th>\n",
        "      <th>clean_text</th>\n",
        "    </tr>\n",
@@ -277,18 +277,18 @@
        "</div>"
       ],
       "text/plain": [
-       "     sentiment                                               text  \\\n",
-       "0            0  I mentioned on Facebook that I was struggling ...   \n",
-       "1            2  BBC News - Amazon boss Jeff Bezos rejects clai...   \n",
-       "2            1  @Microsoft Why do I pay for WORD when it funct...   \n",
-       "3            1  CSGO matchmaking is so full of closet hacking,...   \n",
-       "4            2  Now the President is slapping Americans in the...   \n",
-       "..         ...                                                ...   \n",
-       "995          0  ⭐️ Toronto is the arts and culture capital of ...   \n",
-       "996          0  tHIS IS ACTUALLY A GOOD MOVE TOT BRING MORE VI...   \n",
-       "997          3  Today sucked so it’s time to drink wine n play...   \n",
-       "998          3  Bought a fraction of Microsoft today. Small wins.   \n",
-       "999          2  Johnson & Johnson to stop selling talc baby po...   \n",
+       "     label                                               text  \\\n",
+       "0        0  I mentioned on Facebook that I was struggling ...   \n",
+       "1        2  BBC News - Amazon boss Jeff Bezos rejects clai...   \n",
+       "2        1  @Microsoft Why do I pay for WORD when it funct...   \n",
+       "3        1  CSGO matchmaking is so full of closet hacking,...   \n",
+       "4        2  Now the President is slapping Americans in the...   \n",
+       "..     ...                                                ...   \n",
+       "995      0  ⭐️ Toronto is the arts and culture capital of ...   \n",
+       "996      0  tHIS IS ACTUALLY A GOOD MOVE TOT BRING MORE VI...   \n",
+       "997      3  Today sucked so it’s time to drink wine n play...   \n",
+       "998      3  Bought a fraction of Microsoft today. Small wins.   \n",
+       "999      2  Johnson & Johnson to stop selling talc baby po...   \n",
        "\n",
        "                                            clean_text  \n",
        "0    mentioned facebook   struggling  motivation  r...  \n",
@@ -306,7 +306,7 @@
        "[988 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sentiment</th>\n",
+       "      <th>label</th>\n",
        "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -416,15 +416,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   sentiment                                               text\n",
-       "0          0  mentioned facebook   struggling  motivation  r...\n",
-       "1          2  bbc news amazon boss jeff bezos rejects claims...\n",
-       "2          1        why pay  word  functions poorly chromebook \n",
-       "3          1  csgo matchmaking full closet hacking  truly aw...\n",
-       "4          2  now  president slapping americans  face  reall..."
+       "   label                                               text\n",
+       "0      0  mentioned facebook   struggling  motivation  r...\n",
+       "1      2  bbc news amazon boss jeff bezos rejects claims...\n",
+       "2      1        why pay  word  functions poorly chromebook \n",
+       "3      1  csgo matchmaking full closet hacking  truly aw...\n",
+       "4      2  now  president slapping americans  face  reall..."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,19 +442,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sentiment     0\n",
-       "text          0\n",
-       "clean_text    0\n",
+       "label    0\n",
+       "text     0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
